--- a/HTML/Pedido.html
+++ b/HTML/Pedido.html
@@ -5,12 +5,12 @@
             h1{text-align: center;}
             body{min-height: 100%;}
             a {text-decoration: none; color: black;}
+            .logo {position:relative; left: 45%; width: 100px; height: 100px;}
             footer{background-color: blanchedalmond; margin-top: 100px; position: relative; clear: both; height: 100px}
             .center {
                     display: block;
                     margin-left: auto;
                     margin-right: auto;
-                    width: 50%;
                     text-align: center;
                     }
             .centertb{margin-left: auto; margin-right: auto; text-size-adjust: 50px;}
@@ -38,6 +38,8 @@
     </head>
     <body>
     <h1><a href="Principal.html">Pasteleria el Bonito</a></h1>
+    <img src="Logo.png"  class="logo">
+        <hr>
         <table class="centertb" style="font-size: 150%">
             <tr>
                 <th><a href="Menu.html">Menu</href></th> 
