--- a/HTML/Principal.html
+++ b/HTML/Principal.html
@@ -5,12 +5,12 @@
             h1{text-align: center;}
             body{min-height: 100%;}
             a {text-decoration: none; color: black;}
+            .logo {position:relative; left: 45%; width: 100px; height: 100px;}
             footer{background-color: blanchedalmond; margin-top: 100px; position: relative; clear: both; height: 100px}
             .center {
                     display: block;
                     margin-left: auto;
                     margin-right: auto;
-                    width: 50%;
                     text-align: center;
                     }
             .centertb{margin-left: 43%; margin-right: 75%; text-size-adjust: 50px;}
@@ -37,7 +37,8 @@
     </head>
     <body>
         <h1><a href="Principal.html">Pasteleria el Bonito</a></h1>
-        <p style="margin-left: 90%; text-align: center;"><a href="Ordenes.html">Ordenes</a></div>
+        <img src="Logo.png"  class="logo">
+        <p style="margin-left: 90%; position: absolute; right: 5px; top: 5px";><a href="Ordenes.html">Ordenes</a></div>
 
         <hr>
         <table class="centertb" style="font-size: 150%">
